<resources>
    <string name="app_name">سپانو</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_app">نسخه:</string>
    <string name="bluetooth">بلوتوث</string>
    <string name="calculate">ماشین حساب</string>
    <string name="memory">مدیریت حافظه</string>
    <string name="exit">خروج از برنامه</string>
    <string name="exit_app">برای خروج از برنامه بازگشت را کلیک کنید</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ac">AC</string>
    <string name="negate_number">+/-</string>
    <string name="div">/</string>
    <string name="multiplication">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtract">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="equals">=</string>
    <string name="zero">0</string>

</resources>