<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/included"
            layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullCalculationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            android:padding="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearClick"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/ac" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/negateNumber"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/negate_number" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/divButtonClick"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/div" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplicationButtonClick"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

             <com.google.android.material.button.MaterialButton
                android:id="@+id/sevenButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/seven" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/eightButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/eight" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/nineButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nine" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/subtractButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                android:text="@string/subtract" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

             <com.google.android.material.button.MaterialButton
                android:id="@+id/fourButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/four" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/fiveButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/five" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/sixButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/six" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/plusButtonClick"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

             <com.google.android.material.button.MaterialButton
                android:id="@+id/oneButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/one" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/twoButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/two" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/threeButton"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/three" />

             <com.google.android.material.button.MaterialButton
                android:id="@+id/equalsClick"
                style="@style/OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/equals" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal"
            android:weightSum="1">

             <com.google.android.material.button.MaterialButton
                android:id="@+id/zeroButton"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.32"
                android:text="@string/zero" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
